--- a/kube-prometheus-stack/helm_values.yaml
+++ b/kube-prometheus-stack/helm_values.yaml
@@ -35,7 +35,7 @@ kube-prometheus-stack:
 
   prometheusOperator:
     nodeSelector: {}
-    admissionWebhooks: {}
+    # admissionWebhooks:
       # patch:
       #   nodeSelector: {}
     resources:
